--- a/Chrome Extension/popup.html
+++ b/Chrome Extension/popup.html
@@ -1,5 +1,12 @@
-// popup.html
-<script type="text/javascript" src="popup.js"></script>
-<div style="width:200px">
-    <button id="button">Color all the divs</button>
-</div>
+<!doctype html>
+<html>
+  <head>
+    <title>GTmetrix Analyzer</title>
+      <style>
+      </style>
+  </head>
+  <body>
+    <b>Check this out</b>
+      <a href='http://google.com' target='_newtab'> <button>Click</button></a>
+  </body>
+</html>     
